--- a/index.html
+++ b/index.html
@@ -638,75 +638,7 @@
         }
 
         /* Responsive Design */
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-            }
-            
-            main {
-                padding: 1rem;
-            }
-
-            .hero-content {
-                flex-direction: column;
-                text-align: center;
-            }
-
-            .hero-image {
-                margin-right: 0;
-                margin-bottom: 2rem;
-                max-width: 100%;
-            }
-
-            .hero-title {
-                font-size: 2.5rem;
-            }
-
-            .hip-habesha-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .hip-habesha-left {
-                grid-template-rows: auto auto;
-            }
-
-            .hip-habesha-right {
-                grid-template-rows: auto auto;
-            }
-
-            .brand-name,
-            .hero-subtitle {
-                position: static;
-                margin: 1rem 0;
-                text-align: center;
-            }
-
-            .hero-plant {
-                display: none;
-            }
-
-            .bright-breezy-overlay {
-                position: static;
-                margin: 2rem;
-                margin-top: auto;
-            }
-        }
-
-        /* Image placeholder styling with boho colors */
-        .image-placeholder {
-            background-color: #f3ece2;
-            color: #8d6e63;
-            font-style: italic;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            padding: 2rem;
-            width: 100%;
-            height: 100%;
-            border: 2px dashed rgba(161, 136, 127, 0.3);
-            border-radius: 5px;
-        }
+       </style>
     </style>
 </head>
 <body>
