--- a/index.html
+++ b/index.html
@@ -379,14 +379,13 @@
 
         .bright-breezy-overlay {
             position: absolute;
-            bottom: 2rem;
+            top: 2rem;
             left: 2rem;
             color: #5d4037;
             background: rgba(248, 244, 233, 0.95);
             padding: 1.5rem 2.5rem;
             border-radius: 0;
             border: 1px solid rgba(161, 136, 127, 0.3);
-            position: relative;
         }
 
         .bright-breezy-overlay::before {
@@ -906,7 +905,7 @@
 
     <footer>
         <p>&copy; 2025 Roots & Threads Handmade Clothing. All rights reserved.</p>
-        
+       
     </footer>
 
     <script>
