--- a/index.html
+++ b/index.html
@@ -379,8 +379,10 @@
 
         .bright-breezy-overlay {
             position: absolute;
-            top: 2rem;
-            left: 2rem;
+            top: 1rem;
+            left: 1rem;
+            right:auto;
+            max-width: 250px;
             color: #5d4037;
             background: rgba(248, 244, 233, 0.95);
             padding: 1.5rem 2.5rem;
