--- a/index.html
+++ b/index.html
@@ -738,9 +738,10 @@
 
             .bright-breezy-overlay {
                 position: absolute;
-                bottom: 1rem;
+                top: 1rem;
                 left: 1rem;
-                right: 1rem;
+                right: auto;
+                max-width: 250px;
                 margin: 0;
                 padding: 1rem 1.5rem;
                 width: auto;
